--- a/index.html
+++ b/index.html
@@ -3,281 +3,28 @@
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1 user-scalable=no">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel="icon" href="images/ic_launcher.png">
-    <title>Registro N10</title>
-    <script src="https://www.gstatic.com/firebasejs/3.4.1/firebase.js"></script>
-    <script src="http://smtpjs.com/smtp.js"></script>
-  	<script>
-  		// Initialize Firebase
-  		var config = {
-  		apiKey: "AIzaSyB4JmaNIheFUZwMsjTBXCnFHKQNfpRFfXA",
-  		authDomain: "formularios-81a40.firebaseapp.com",
-  		databaseURL: "https://formularios-81a40.firebaseio.com",
-  		storageBucket: "formularios-81a40.appspot.com",
-  		messagingSenderId: "793947826055"
-  		};
-  		firebase.initializeApp(config);
-  	</script>
+    <link rel="icon" href="../../favicon.ico">
+    <title>Entrenadores</title>
+    <!-- Bootstrap core CSS -->
     <link href="dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="dist/css/navbar-fixed-top.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
     <link href="dist/css/signin.css" rel="stylesheet">
-    <link href="dist/css/custom.css" rel="stylesheet">
   </head>
+
   <body>
-    <!-- Fixed navbar -->
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-      <div class="container">
-        <div class="navbar-header">
-          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar" aria-expanded="false" aria-controls="navbar">
-            <span class="sr-only">Toggle navigation</span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </button>
-          <a href="index.html">
-            <img class="navbar-brand" alt="Brand" src="images/ic_launcher.png">
-          </a>
-        </div>
-        <div id="navbar" class="navbar-collapse collapse">
-          <ul class="nav navbar-nav">
-            <li class="active"><a href="index.html">Negocio</a></li>
-            <li><a href="producto.html">Producto</a></li>
-            <li><a href="#Contacto">Contacto</a></li>
-            <li><a href="#Privacidad">Privacidad</a></li>
-          </ul>
-        </div><!--/.nav-collapse -->
-      </div>
-    </nav>
-    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
-      <ol class="carousel-indicators">
-        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-      </ol>
-      <div class="carousel-inner" role="listbox">
-        <div class="item active">
-          <img data-src="holder.js/1140x500/auto/#777:#555/text:First slide" alt="First slide">
-        </div>
-        <div class="item">
-          <img data-src="holder.js/1140x500/auto/#666:#444/text:Second slide" alt="Second slide">
-          <div class="container">
-            <div class="carousel-caption">
-              <a class="btn btn-lg btn-primary" href="#" role="button">Ir a la página</a></p>
-            </div>
-          </div>
-        </div>
-      </div>
-      <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
-    </div>
 
     <div class="container">
-        <form onsubmit="return false">
-          <div align="center"><h2 class="form-signin-heading">Registro</h2></div>
-
-          <div class="form-group input-group-lg">
-              <label for="inputNombre" >Nombre:</label>
-              <input type="text" id="inputNombre" class="form-control" placeholder="ingresa tu nombre..." aria-describedby="sizing-addon1" required>
-          </div>
-
-          <div class="form-group input-group-lg">
-              <label for="inputEmail" >Email:</label>
-              <input type="email" id="inputEmail" class="form-control" placeholder="ingresa tu email..." aria-describedby="sizing-addon1" required>
-          </div>
-
-          <div class="form-group input-group-lg">
-            <label for="inputCelular" >Celular:</label>
-              <input type="tel" id="inputCelular" class="form-control" placeholder="ingresa tu teléfono celular..." aria-describedby="sizing-addon1" required>
-          </div>
-
-          <div class="form-group input-group-lg">
-              <label for="inputCiudad" >Ciudad:</label>
-              <input type="text" id="inputCiudad" class="form-control" placeholder="ingresa tu ciudad..." aria-describedby="sizing-addon1" required>
-          </div>
-
-          <div class="form-group input-group-lg">
-              <label for="inputPais" >País:</label>
-              <input type="text" id="inputPais" class="form-control" placeholder="ingresa tu país..." aria-describedby="sizing-addon1" required>
-          </div>
-          <label for="obtenerCodigo" >Código de Entrenador:</label>
-          <div class="input-group input-group-lg">
-              <input type="text" id="inputCodigo" class="form-control" placeholder="Código..." aria-describedby="sizing-addon1" required>
-              <span class="input-group-btn">
-                <button id="obtenerCodigo" class="btn btn-success btn-block" type="button">Dame un Código!</button>
-              </span>
-          </div><!-- /input-group -->
-          <button id="registro" class="btn btn-lg btn-primary btn-block" onClick="register()">Registrame</button>
-        </form>
-        <button  class="btn btn-success btn-block" type="button" onClick="enviarEmail()">Enviar EMAIL</button>
+      <div class="form-signin">
+        <h2 class="form-signin-heading">Entrenadores</h2>
+        <label for="inputEmail" class="sr-only">Código</label>
+        <input type="text" id="inputCodigo" class="form-control" placeholder="Código" required autofocus>
         <br>
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Ingresar</button>
       </div>
     </div>
-    <footer class ="bs-docs-footer textcolorWhite" role="contentinfo">
-      <p><h3>Siguenos en</h3></p>
-      <p>
-        <a href="#facebook"><img src="images/social/facebook.png" width="60px" height="60px"></img></a>
-        <a href="#youtube"><img src="images/social/youtube.png" width="60px" height="60px"></img></a>
-        <a href="#instagram"><img src="images/social/instagram.png" width="60px" height="60px"></img></a>
-      </p>
-      <p >&copy; 2016 Nivel 10. All rights reserved.
-        <a href="#privacy">Privacy</a><font color=white size="3">.</font>
-        <a href="#terms">Terms of Service</a>.
-      </p>
-    </footer>
-    <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
-    <script>
-    var codigos = [];
-    var nombres = [];
-    var emails = [];
-
-    var randomAsesor = 0;
-    document.getElementById('registro').style.display = 'none'; //block
-    var obtenerCodigo = document.getElementById('obtenerCodigo');
-    var myInput = document.getElementById('inputCodigo');
-
-    obtenerCodigo.addEventListener('click', function () {
-      contarASsesor();
-    });
-    //FundcionesObtener Código
-    function contarASsesor(){
-      var c = 0;
-      codigos = [];
-      nombres = [];
-      emails = [];
-      var ref = new Firebase("https://n10.firebaseio.com/asesor");
-      ref.on('child_added', function(snapshot) {
-        var asesor = snapshot.val();
-        var nombreAsesor = asesor.firstName +" "+ asesor.lastName;
-        emails.push(asesor.email);
-        nombres.push(nombreAsesor);
-        codigos.push(asesor.memberID);
-        c++;
-      });
-      ref.once('value', function(snapshot) {
-        //Aqui se recibe el codigo obtenido
-        var rand = randomIntFromInterval(0,c);
-        randomAsesor = rand;
-        document.getElementById('inputCodigo').value = codigos[rand];
-        console.log(rand);
-        document.getElementById('registro').style.display = 'block';
-      });
-    }
-    function randomIntFromInterval(min,max){
-      return Math.floor(Math.random() * (max - min) + min);
-    }
-    //Fundciones Validar Código
-    function validarCodigo(codigoIngresado){
-      if(codigoIngresado != ""){
-        var ref = new Firebase("https://n10.firebaseio.com/asesor");
-        var valido = false;
-        ref.orderByChild("memberID").equalTo(codigoIngresado.replace(/\s/g, '')).on("child_added", function(snapshot) {
-          valido = true;
-        });
-        ref.once('value', function(snapshot) {
-          //Aqui se verifica True: existe el codigo, False: no existe el codigo
-          if(valido){
-            document.getElementById('registro').style.display = 'block';
-          }else{
-            document.getElementById('registro').style.display = 'none';
-          }
-        });
-      }else{
-        document.getElementById('registro').style.display = 'none';
-      }
-    }
-    function attachTextListener(input, func) {
-      if (window.addEventListener) {
-        input.addEventListener('input', func, false);
-      } else
-      input.attachEvent('onpropertychange', function() {
-        func.call(input);
-      });
-    }
-    attachTextListener(myInput, function() {
-      // Check and manipulate this.value here
-      validarCodigo(this.value);
-      var converted = this.value.toUpperCase();
-      document.getElementById('inputCodigo').value = converted;
-    });
-    function register(){
-      var nombre = document.getElementById("inputNombre");
-      var email = document.getElementById("inputEmail");
-      var celular = document.getElementById("inputCelular");
-      var ciudad = document.getElementById("inputCiudad");
-      var pais = document.getElementById("inputPais");
-      var codigo = document.getElementById("inputCodigo");
-      var date = new Date();
-      var month = date.getMonth();
-      var day = date.getDate();
-      var year = date.getFullYear();
-      var hour = date.getHours();
-      var minute = date.getMinutes();
-      if(nombre.value != "" && email.value != "" && celular.value != "" && ciudad.value != "" && pais.value != "" && codigo.value != ""){
-        //bloqueando boton
-        document.getElementById('registro').disabled = true;
-        document.getElementById('registro').innerHTML= "Registrando...";
-        //logs
-        console.log(nombre.value+"-"+email.value+"-"+celular.value+"-"+ciudad.value+"-"+pais.value+"-"+codigo.value);
-        console.log((month+1)+"-"+day+"-"+year);
-        console.log(hour+"-"+minute);
-        //enviar email
-        localStorage.setItem("ususario", nombre.value);
-        localStorage.setItem("asesor", nombres[randomAsesor]);
-        localStorage.setItem("codigo", codigos[randomAsesor]);
-        enviarEmail();
-        //writing data to firebase
-        var prospectoRef = firebase.database().ref('prospecto/').push();
-        prospectoRef.set({
-          nombre: nombre.value,
-          email: email.value,
-          celular: celular.value,
-          ciudad: ciudad.value,
-          pais: pais.value,
-          codigo: codigo.value,
-          fecha: ((month+1)+"/"+day+"/"+year),
-          hora: (hour+":"+minute)
-        }).then(function() {
-          console.log("Set exitoso.");
-          window.location.assign("registroExitoso.html");
-        })
-        .catch(function(error) {
-          console.log("Set fallido: " + error.message);
-        });
-
-      }else{
-        console.log("there are no values.");
-      }
-    }
-    function enviarEmail(){
-      //console.log("email enviado!"+emails[randomAsesor]);
-      /*Email.send("organizacionops@gmail.com",
-      "mygvs.mh@gmail.com",
-      "This is a subject",
-      "this is the body",
-      {token: "7d7a6d0b-2605-47d2-bc93-46101ef41f5b"});*/
-      Email.send("mygvs.mh@gmail.com",
-      "mygvs.mh@gmail.com",
-      "This is a subject",
-      "this is the body",
-      "smtp.hostgator.com",
-      "nivel10",
-      "RQOwAL2Tng9i");
-    }
-    </script>
-    <!-- Bootstrap core JavaScript
-    ================================================== -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="assets/js/vendor/jquery.min.js"><\/script>')</script>
-    <script src="dist/js/bootstrap.min.js"></script>
-    <script src="assets/js/docs.min.js"></script>
   </body>
 </html>
